Implement real acceptance test.

--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -11,6 +11,8 @@
       <input type='submit' value="Save"/>
     </form>
 
+    <h2>Your ideas</h2>
+
     <ul>
       <% ideas.each do |idea| %>
         <li><%= idea.title %> - <%= idea.description %></li>
