--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -24,7 +24,7 @@
           <%= idea.title %> - <%= idea.description %>
           <a href="/<%= idea.id %>">Edit</a>
 
-          <form action'<%= idea.id %>' value="POST">
+          <form action='<%= idea.id %>' method="POST">
             <input type="hidden" name="_method" value="DELETE">
             <input type='submit' value="Delete"/>
           </form>
