--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -15,20 +15,18 @@
     </form>
 
     <h2>Your ideas</h2>
-
     <ul>
       <% ideas.each do |idea| %>
-
         <li id="idea_<%= idea.id %>">
-
-          <%= idea.title %> - <%= idea.description %>
+          <%= idea.rank %>: <%= idea.title %> - <%= idea.description %>
           <a href="/<%= idea.id %>">Edit</a>
-
-          <form action='<%= idea.id %>' method="POST">
+          <form action='/<%= idea.id %>' method='POST'>
             <input type="hidden" name="_method" value="DELETE">
             <input type='submit' value="Delete"/>
           </form>
-
+          <form action='/<%= idea.id %>/like' method='POST' style="display: inline">
+            <input type='submit' value="+"/>
+          </form>
         </li>
       <% end %>
     </ul>
