--- a/lib/app/views/edit.erb
+++ b/lib/app/views/edit.erb
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Edit your idea</h1>
-    <form action="/<%= idea.id %>" method="POST">
+    <form action="/ideas/<%= idea.id %>" method="POST">
       <input type="hidden" name="_method" value="PUT">
       <label for="title">Title</label>
       <input type='text' id="title" name="title" value="<%= idea.title %>"/><br/>
