--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -19,12 +19,12 @@
       <% ideas.each do |idea| %>
         <li id="idea_<%= idea.id %>">
           <%= idea.rank %>: <%= idea.title %> - <%= idea.description %>
-          <a href="/<%= idea.id %>">Edit</a>
-          <form action='/<%= idea.id %>' method='POST'>
+          <a href="/ideas/<%= idea.id %>">Edit</a>
+          <form action='/ideas/<%= idea.id %>' method='POST'>
             <input type="hidden" name="_method" value="DELETE">
             <input type='submit' value="Delete"/>
           </form>
-          <form action='/<%= idea.id %>/like' method='POST' style="display: inline">
+          <form action='/ideas/<%= idea.id %>/like' method='POST' style="display: inline">
             <input type='submit' value="+"/>
           </form>
         </li>
