Add tag display to index.erb. Previous commit was for tag entry.

--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -19,7 +19,12 @@
     <ul>
       <% ideas.each do |idea| %>
         <li id="idea_<%= idea.id %>">
-          <%= idea.rank %>: <%= idea.title %> - <%= idea.description %>
+
+          <%= idea.rank %>: <%= idea.title %> - <%= idea.description %> :::
+
+          <% idea.tags.each do |tag| %>
+            <a href=#><%= tag.line %></a>
+          <% end %>
 
           <br/>
 
