--- a/lib/app/views/index.erb
+++ b/lib/app/views/index.erb
@@ -8,16 +8,14 @@
 
     <h1>Add a new idea</h1>
 
-    <form action='/' method='POST'>
-      Title: <input type='text' name='title'/><br/>
-      Description: <textarea name='description'></textarea><br/>
-      Tags: <input type='text' name='tags'/><br/>
-      <input type='submit' value="Save"/>
-    </form>
+    <%= erb :form, locals: {idea: idea, mode: "new"} %>
 
     <h2>Your ideas</h2>
+
     <ul>
+
       <% ideas.each do |idea| %>
+
         <li id="idea_<%= idea.id %>">
 
           <%= idea.rank %>: <%= idea.title %> - <%= idea.description %> :::
@@ -41,6 +39,7 @@
 
         </li>
       <% end %>
+
     </ul>
   </body>
 </html>
